cc_binary(
    name = "cat",
    srcs = ["cat.c"],
)

cc_binary(
    name = "cat_io_uring",
    srcs = ["cat_io_uring.c"],
)

cc_binary(
    name = "cat_liburing",
    srcs = ["cat_io_uring.c"],
    linkopts = ["-luring"],
)

cc_binary(
    name = "cp_liburing",
    srcs = ["cp_liburing.c"],
    linkopts = ["-luring"],
)
